@@ -26,7 +26,6 @@ import org.xmlobjects.util.copy.CopyBuilder;
 import org.xmlobjects.util.copy.Copyable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.DoubleStream;
 
 public abstract class AbstractMatrix extends GMLObject implements CityGMLObject {
@@ -55,7 +54,7 @@ public abstract class AbstractMatrix extends GMLObject implements CityGMLObject 
     }
 
     public List<Double> toRowMajorList() {
-        return DoubleStream.of(matrix.getRowPackedCopy()).boxed().collect(Collectors.toList());
+        return DoubleStream.of(matrix.getRowPackedCopy()).boxed().toList();
     }
 
     public void fromRowMajorList(List<Double> values) {
@@ -63,7 +62,7 @@ public abstract class AbstractMatrix extends GMLObject implements CityGMLObject 
     }
 
     public List<Double> toColumnMajorList() {
-        return DoubleStream.of(matrix.getColumnPackedCopy()).boxed().collect(Collectors.toList());
+        return DoubleStream.of(matrix.getColumnPackedCopy()).boxed().toList();
     }
 
     public void fromColumnMajorList(List<Double> values) {
